# machiine-learing-network

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/: main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/src/anomaly_detection/: app.py  config.py  constants.py  logging.py
backend/src/anomaly_detection/api/routers/: alerts.py  analytics.py  attacks.py  auth.py  dashboard.py  datasets.py  drift.py  flows.py  logs.py  ml_prediction.py  models_stats.py  monitoring.py  packets.py  profile.py  reports.py  settings.py  users.py
backend/src/anomaly_detection/authentication/: __init__.py
backend/src/anomaly_detection/db/: engine.py  init_db.py  models.py
backend/src/anomaly_detection/ml/: autoencoder.py  decision_tree.py  evaluate.py  halfspace_trees.py  isolation_forest.py  lightgbm_model.py  random_forest.py  train.py  xgboost_model.py
backend/src/anomaly_detection/pipeline/: data_card.py  features.py  generate_fixture.py  ingest.py  process_nsl_kdd.py  split.py
backend/src/anomaly_detection/schemas/: common.py  flows.py
backend/src/anomaly_detection/services/: inference.py  notifications.py
frontend/: alert-center.html  analytics.html  attack-detection.html  dashboard.html  dataset-management.html  forgot-password.html  index.html  live-monitoring.html  logout.html  logs.html  ml-prediction.html  model-management.html  packet-capture.html  profile.html  register.html  reports.html  settings.html  user-management.html  vite.config.ts
frontend/css/: style.css
frontend/js/: api.js  auth.js  common.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AlertDrillDown.tsx  AlertTable.tsx  ErrorBoundary.tsx  FlowFeed.tsx  Header.tsx  KPIStrip.tsx  LoginPage.tsx  Sidebar.tsx  StatusBar.tsx  SystemOps.tsx  TimelineChart.tsx
frontend/src/hooks/: useAuth.ts  usePolling.ts  useSSE.ts
frontend/src/pages/: DatasetOverview.tsx  ModelComparison.tsx
simulator/src/simulator/: replay.py
tests/: conftest.py
tests/integration/: test_api_alerts.py  test_api_endpoints.py  test_api_flows.py  test_api_models.py  test_auth_gating.py  test_feedback.py  test_simulation.py
tests/unit/: test_pipeline.py  test_schemas.py  test_scoring.py  test_split.py
