[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detection"
version = "1.0.0"
description = "ML-Based Network Anomaly Detection System — MSc Dissertation Project"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14",

    # Authentication & Security
    "PyJWT>=2.9.0",
    "bcrypt>=4.2.0",

    # Data processing
    "pandas>=2.2",
    "pyarrow>=18.0",
    "numpy>=2.1",

    # Machine Learning
    "scikit-learn>=1.6",
    "xgboost>=2.0",
    "joblib>=1.4",

    # Packet capture
    "scapy>=2.6.0",

    # Report generation
    "reportlab>=4.2",
    "openpyxl>=3.1",

    # Logging & utilities
    "structlog>=24.4",
    "httpx>=0.28",
    "aiosqlite>=0.20.0",
    "psutil>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-psycopg2>=2.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "N803",  # Argument name should be lowercase (allow uppercase X/Y for ML convention)
    "N806",  # Variable name should be lowercase (allow uppercase X/Y for ML convention)
    "B904",  # Use raise from within except blocks
    "E501",  # Line too long
    "B008",  # Allow FastAPI Depends/File/Form default function calls
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "joblib.*",
    "pandas.*",
    "sklearn.*",
    "xgboost.*",
    "scapy.*",
    "reportlab.*",
    "openpyxl.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["../tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]
